test/sema/unknown_type_fn.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s

// CHECK: [[# @LINE + 1 ]]:11: error: failed to resolve type 'userDefinedType'
fn foo(): userDefinedType {}

fn main(): unit {}

// CHECK-NOT: {{.*error.*}}
